--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ https://templatemo.com/tm-538-digital-trend
 
                       <div class="quote" data-aos="fade-up" data-aos-delay="200"></div>
 
-                      <h2 class="mb-4" data-aos="fade-up" data-aos-delay="300">Lorem ipsum Sed eiusmod esse aliqua sed incididunt aliqua incididunt mollit id et sit proident dolor nulla sed commodo.</h2>
+                      <h2 class="mb-4" data-aos="fade-up" data-aos-delay="300">Bagus banget barangnya, pelayanannya juga ramah, ga nyesel belanja disini!</h2>
 
                       <p data-aos="fade-up" data-aos-delay="400">
                         <strong>Mary Zoe</strong>
